--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^5.5.2",
+    "@tanstack/react-query": "^5.12.2",
+    "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
+    "googleapis": "^129.0.0",
     "next": "14.0.0",
+    "next-auth": "^4.24.4",
+    "next-seo": "^6.4.0",
+    "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/cookie": "^0.5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "prisma": "^5.5.2",
     "typescript": "^5"
   }
 }
